@@ -50,7 +50,7 @@
                         <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'work' %}">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link new-amsterdam-regular mx-2" href="#">Projects</a>
+                        <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'project' %}">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link new-amsterdam-regular mx-2" href="#">Articles</a>
@@ -164,16 +164,6 @@
 
 
 </div>
-
-
-
-
-
-
-
-
-
-    
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
