@@ -49,7 +49,7 @@
                 <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'work' %}">Work</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link new-amsterdam-regular mx-2" href="#">Projects</a>
+                <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'project' %}">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link new-amsterdam-regular mx-2" href="#">Articles</a>
