@@ -1,0 +1,6 @@
+from django.contrib import admin
+from .models import Projects
+# Register your models here.
+
+admin.site.register(Projects)
+
