@@ -52,7 +52,7 @@
                 <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'work' %}">Work</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link new-amsterdam-regular mx-2" href="#">Projects</a>
+                <a class="nav-link new-amsterdam-regular mx-2" href="{% url 'project' %}">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link new-amsterdam-regular mx-2" href="#">Articles</a>
@@ -83,7 +83,7 @@
 
     {% for experience in experiences %}
 
-    {% if experience.entry_num|mod:2 != 0 %}
+    {% if experience.entry_num|mod:2 == 0 %}
 
     <div class="row">
 
@@ -219,6 +219,7 @@
 
 
 </div>
+<!--End of Professional Experience -->
 
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
