@@ -23,6 +23,7 @@ urlpatterns = [
     path('admin/', admin.site.urls),
     path('',include('About.urls')),
     path('Work/', include('Work.urls')),
+    path('Project/', include('Project.urls')),
 ]
 
 urlpatterns += static(settings.MEDIA_URL, document_root = settings. MEDIA_ROOT)
